--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="description" content="GPXファイルを読み込んで、地図に描かれたポイントやルートを編集するWebアプリ">
   <meta property="og:title" content="GPX Trail Editor">
   <meta property="og:description" content="GPXファイルを読み込んで、地図に描かれたポイントやルートを編集するWebアプリ">
-  <meta property="og:url" content="https://github.com/bunatree/gpx-trail-editor">
+  <meta property="og:url" content="https://bunatree.github.io/gpx-trail-editor/">
   <meta property="og:image" content="images/icon512.png">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="GPX Trail Editor">
   <meta property="og:locale" content="ja_JP">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@bunatree">
-  <link rel="canonical" href="https://github.com/bunatree/gpx-trail-editor">
+  <link rel="canonical" href="https://bunatree.github.io/gpx-trail-editor/">
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -28,7 +28,7 @@
 
   <link rel="stylesheet" href="./styles/styles.css">
 
-  <link rel="icon" href="./favicon.ico" sizes="32x32"><!-- 32×32 -->
+  <link rel="icon" href="./favicon.ico" sizes="48x48">
   <link rel="icon" href="./icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./apple-touch-icon.png"><!-- 180×180 -->
 
