Added small shadows to the menu panels.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu shadow-sm">
                       <li class="op-reverse-route"><a class="dropdown-item" data-target-name="idx" data-op-name="reverse" title="スタートからゴールへのルート順序を反転させます。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-arrow-down-up me-2"></i>
                         <span class="label">ルート反転</span>
@@ -134,7 +134,7 @@
                     <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu shadow-sm">
                       <li class="op-check-all"><a class="dropdown-item" data-target-name="check" data-op-name="turn-on" title="すべての行のチェックボックスをONにします。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-check-square me-2"></i>
                         <span class="label">チェック ON</span>
@@ -158,7 +158,7 @@
                     <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu shadow-sm">
                       <li class="op-clear-datetime"><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked" title="チェックされた行の日時を消去します。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された日時を消去</span>
@@ -187,7 +187,7 @@
                     <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu shadow-sm">
                       <li class="op-clear-latitude"><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked" title="チェックされた行の緯度を消去します。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された緯度を消去</span>
@@ -203,7 +203,7 @@
                     <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu shadow-sm">
                       <li class="op-clear-longitude"><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked" title="チェックされた行の経度を消去します。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された経度を消去</span>
@@ -219,7 +219,7 @@
                     <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu shadow-sm">
                       <li class="op-clear-elevation"><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked" title="チェックされた行の標高を消去します。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された標高を消去</span>
