--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された緯度を消去</span>
                       </a></li>
+                      <li class="op-smooth-track"><a class="dropdown-item" data-target-name="latitude" data-op-name="smooth-track" title="各ポイントの座標を調整し、軌跡のジグザグを少なくします。" data-bs-toggle="tooltip" data-bs-placement="right">
+                        <i class="bi bi-eraser-fill me-2"></i>
+                        <span class="label">軌跡のギザギザを緩和</span>
+                      </a></li>
                     </ul>
                   </div>
                 </div>
