Implemented a new functionality that adds random noises to marker positions. Updated the smoothing functionality.

--- a/index.html
+++ b/index.html
@@ -193,8 +193,12 @@
                         <span class="label">選択された緯度を消去</span>
                       </a></li>
                       <li class="op-smooth-track"><a class="dropdown-item" data-target-name="latitude" data-op-name="smooth-track" title="各ポイントの座標を調整し、軌跡のジグザグを少なくします。" data-bs-toggle="tooltip" data-bs-placement="right">
-                        <i class="bi bi-eraser-fill me-2"></i>
-                        <span class="label">軌跡のギザギザを緩和</span>
+                        <i class="bi bi-arrows-collapse-vertical me-2"></i>
+                        <span class="label">軌跡のジグザグを平滑化</span>
+                      </a></li>
+                      <li class="op-add-random-noise"><a class="dropdown-item" data-target-name="latitude" data-op-name="add-random-noise" title="各ポイントにランダムなノイズを加え、意図的に軌跡のジグザグを大きくします" data-bs-toggle="tooltip" data-bs-placement="right">
+                        <i class="bi bi-arrows-expand-vertical me-2"></i>
+                        <span class="label">軌跡のジグザグを強調</span>
                       </a></li>
                     </ul>
                   </div>
@@ -211,6 +215,14 @@
                       <li class="op-clear-longitude"><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked" title="チェックされた行の経度を消去します。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された経度を消去</span>
+                      </a></li>
+                      <li class="op-smooth-track"><a class="dropdown-item" data-target-name="latitude" data-op-name="smooth-track" title="各ポイントの座標を調整し、軌跡のジグザグを少なくします。" data-bs-toggle="tooltip" data-bs-placement="right">
+                        <i class="bi bi-arrows-collapse-vertical me-2"></i>
+                        <span class="label">軌跡のジグザグを平滑化</span>
+                      </a></li>
+                      <li class="op-add-random-noise"><a class="dropdown-item" data-target-name="latitude" data-op-name="add-random-noise" title="各ポイントにランダムなノイズを加え、意図的に軌跡のジグザグを大きくします。" data-bs-toggle="tooltip" data-bs-placement="right">
+                        <i class="bi bi-arrows-expand-vertical me-2"></i>
+                        <span class="label">軌跡のジグザグを強調</span>
                       </a></li>
                     </ul>
                   </div>
