Added i18n to the new menu items, smooth track and add random noise.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <i class="bi bi-arrows-collapse-vertical me-2"></i>
                         <span class="label">軌跡のジグザグを平滑化</span>
                       </a></li>
-                      <li class="op-add-random-noise"><a class="dropdown-item" data-target-name="latitude" data-op-name="add-random-noise" title="各ポイントにランダムなノイズを加え、意図的に軌跡のジグザグを大きくします" data-bs-toggle="tooltip" data-bs-placement="right">
+                      <li class="op-add-random-noise"><a class="dropdown-item" data-target-name="latitude" data-op-name="add-random-noise" title="各ポイントにランダムなノイズを加え、意図的に軌跡のジグザグを大きくします。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-arrows-expand-vertical me-2"></i>
                         <span class="label">軌跡のジグザグを強調</span>
                       </a></li>
