--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
                         <i class="bi bi-arrow-down-up me-2"></i>
                         <span class="label">ルート反転</span>
                       </a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li class="op-delete-checked"><a class="dropdown-item" data-target-name="idx" data-op-name="delete-checked" title="選択された行とポイントを削除します。" data-bs-toggle="tooltip" data-bs-placement="right">
+                        <i class="bi bi-x-square me-2"></i>
+                        <span class="label">選択された行を削除</span>
+                      </a></li>
+                      <li class="op-thin-out"><a class="dropdown-item" data-target-name="idx" data-op-name="thin-out" title="指定された間隔で行とポイントを間引きます。" data-bs-toggle="tooltip" data-bs-placement="right">
+                        <i class="bi bi-dash-circle-dotted me-2"></i>
+                        <span class="label">行を間引く</span>
+                      </a></li>
                     </ul>
                   </div>
                 </div>
@@ -192,6 +201,7 @@
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された緯度を消去</span>
                       </a></li>
+                      <li><hr class="dropdown-divider"></li>
                       <li class="op-smooth-track"><a class="dropdown-item" data-target-name="latitude" data-op-name="smooth-track" title="各ポイントの座標を調整し、軌跡のジグザグを少なくします。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-arrows-collapse-vertical me-2"></i>
                         <span class="label">軌跡のジグザグを平滑化</span>
@@ -216,6 +226,7 @@
                         <i class="bi bi-eraser-fill me-2"></i>
                         <span class="label">選択された経度を消去</span>
                       </a></li>
+                      <li><hr class="dropdown-divider"></li>
                       <li class="op-smooth-track"><a class="dropdown-item" data-target-name="latitude" data-op-name="smooth-track" title="各ポイントの座標を調整し、軌跡のジグザグを少なくします。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-arrows-collapse-vertical me-2"></i>
                         <span class="label">軌跡のジグザグを平滑化</span>
