Implemented a new functionality that thins out the points, markers, and table rows.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                       </a></li>
                       <li class="op-thin-out"><a class="dropdown-item" data-target-name="idx" data-op-name="thin-out" title="指定された間隔で行とポイントを間引きます。" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi bi-dash-circle-dotted me-2"></i>
-                        <span class="label">行を間引く</span>
+                        <span class="label">間引く</span>
                       </a></li>
                     </ul>
                   </div>
