Moved the log name form into the top navigation bar.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
           <img src="images/icon192.png"class="app-icon me-2" alt="App Icon" class="me-2">
           GPX Trail Editor
         </div>
+
+        <div id="log-name-form" class="d-none">
+          <input id="log-name-input" type="text" class="form-control form-control-sm" />
+        </div>
+
         <div class="justify-content-end" id="nav-buttons">
           <button id="btn-nav-create-new" class="btn btn-sm btn-light d-none"><span class="label">New</span></button>
           <button id="btn-nav-export" class="btn btn-sm btn-primary d-none"><i class="bi bi-download me-2"></i><span class="label">Export</span></button>
@@ -56,10 +61,10 @@
 
     <div class="container-fluid">
 
-      <div id="log-name-form" class="input-group mt-3 mb-3 d-none">
+      <!-- <div id="log-name-form" class="input-group mt-3 mb-3 d-none">
         <label class="input-group-text" for="log-name-input">タイトル</label>
         <input id="log-name-input" type="text" class="form-control" />
-      </div>
+      </div> -->
 
       <div id="op-btn-toolbar" class="d-flex justify-content-center mt-3 mb-3 d-none" role="toolbar">
         <button id="btn-reverse" class="btn btn-light border me-1" data-bs-toggle="tooltip">
