Improved the layout of the map and the table.

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
       <!-- Contains the map and the table. -->
       <div class="layout-wrapper">
 
-        <div id="primary-container">
+        <div id="primary-container" class="d-flex flex-column gap-2">
 
-          <div id="data-summary" class="d-flex justify-content-center align-items-center rounded d-none">
+          <div id="data-summary" class="d-flex gap-4 justify-content-center align-items-center rounded d-none">
             <div id="total-gpx-time" data-bs-toggle="tooltip">
               <div class="desc text-center">
                 <i class="bi bi-stopwatch"></i>
@@ -155,7 +155,7 @@
           </div>
   
           <div id="table-container" class="d-none">
-            <table id="data-table" class="table table-sm table-borderless table-hover w-100 d-none">
+            <table id="data-table" class="table table-sm table-borderless table-hover w-100 mb-0 d-none">
               <thead>
                 <tr>
                   <th class="idx align-middle">
