--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
           </form>
         </div>
         <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" id="reset-settings">Reset to Default</button>
           <button type="button" class="btn btn-primary btn-confirm btn-info" data-bs-dismiss="modal">OK</button>
         </div>
       </div>
