--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <button id="btn-nav-export" class="btn btn-sm btn-primary d-none"><i class="bi bi-download"></i><span class="label ms-2">Export</span></button>
           <button id="btn-nav-start-over" class="btn btn-sm btn-danger d-none"><i class="bi bi-arrow-clockwise"></i><span class="label ms-2">Start Over</span></button>
           <a id="settings" class="btn-btn-link ps-2 pe-1" href="javascript:void(0)" onclick="GpxTrailEditor.showSettingDialog()" title="設定"><i class="bi bi-gear-fill"></i></a>
-          <a id="goto-github-repo" class="btn btn-link ps-1 pe-2" href="https://github.com/bunatree/gpx-trail-editor" title="GitHub レポジトリを開く"><i class="bi bi-github"></i></a>
+          <a id="goto-github-repo" class="btn btn-link ps-1 pe-2" href="https://github.com/bunatree/gpx-trail-editor" target="_blank" title="GitHub レポジトリを開く"><i class="bi bi-github"></i></a>
         </div>
 
       </div>
